# WccPong

./: CMakeLists.txt  Pong.pro  README.md  controlpanel.cpp  controlpanel.h  controlpanel.ui  gameplay.cpp  gameplay.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  webcamcap.cpp  webcamcap.h
